# Rust-AI

./: .env.example  .gitignore  Cargo.toml  Cargo.toml.addendum  LICENSE  README.md
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md
src/: auth.rs  config.rs  convex_service.rs  file_processor.rs  lib.rs  main.rs  routing.rs  search_service.rs  types.rs
